# h3althlog

./: .env.example  .gitignore  argon.py  pyproject.toml  todo.md
src/h3althlog/: __main__.py  app.py  config.py  extensions.py  models.py  wsgi.py
src/h3althlog/auth/: __init__.py  routes.py
src/h3althlog/entries/: __init__.py  forms.py  routes.py
src/h3althlog/entries/templates/: form.html
src/h3althlog/instance/: h3althlog.db
src/h3althlog/main/: __init__.py  routes.py  services.py  utils.py  utils_month.py
src/h3althlog/main/templates/: _header.html  dashboard.html
src/h3althlog/static/css/: auth.css  dashboard.css  dashboard.css.old  dashboard.css.oldn
src/h3althlog/templates/: _header.html  base.html  dashboard.html  day.html  form.html  login.html  month.html
